# paneflow

./: .gitignore  .mcp.json  ABOUT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMUX_ANALYSIS.md  Cargo.toml  LICENSE  README.md  context7.json  deny.toml  ide.yml  llms.txt  rust-toolchain.toml
crates/paneflow-acp/: Cargo.toml
crates/paneflow-acp/src/: auth.rs  client.rs  connection.rs  discovery.rs  file_ops.rs  lib.rs  permission.rs  session.rs  spawn.rs  streaming.rs  terminal.rs
crates/paneflow-acp/tests/: agent_connection.rs  end_to_end.rs
crates/paneflow-ai-hook/: Cargo.toml
crates/paneflow-ai-hook/src/: main.rs
crates/paneflow-ai-hook/tests/: integration.rs
crates/paneflow-app/: Cargo.toml
crates/paneflow-app/src/: glyph_atlas.rs  main.rs  renderer.rs  shader_pipeline.rs  shader_renderer.rs  terminal.rs  terminal_widget.rs  theme.rs
crates/paneflow-app/src/shaders/: terminal.wgsl
crates/paneflow-cli/: Cargo.toml
crates/paneflow-cli/src/: client.rs  main.rs
crates/paneflow-config/: Cargo.toml
crates/paneflow-config/src/: lib.rs  loader.rs  schema.rs  watcher.rs
crates/paneflow-ipc/: Cargo.toml
crates/paneflow-ipc-client/: Cargo.toml
crates/paneflow-ipc-client/src/: lib.rs
crates/paneflow-ipc/src/: dispatcher.rs  handlers.rs  lib.rs  protocol.rs  server.rs
crates/paneflow-mcp-install/: Cargo.toml  build.rs  paneflow-mcp-install.manifest
crates/paneflow-mcp-install/src/: api.rs  cli.rs  detect.rs  hooks.rs  io.rs  lib.rs  merge.rs
crates/paneflow-mcp-install/src/agents/: claude_code.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  support.rs  testutil.rs
crates/paneflow-process/: Cargo.toml
crates/paneflow-process/src/: lib.rs
crates/paneflow-shim/: Cargo.toml
crates/paneflow-shim/assets/: opencode-paneflow-status.ts  pi-paneflow-status.ts
crates/paneflow-shim/src/: detect.rs  exec.rs  hooks.rs  main.rs
crates/paneflow-telemetry/: Cargo.toml
crates/paneflow-telemetry/src/: client.rs  id.rs  lib.rs  tags.rs
crates/paneflow-terminal/: Cargo.toml
crates/paneflow-terminal/src/: bridge.rs  emulator.rs  lib.rs  pty_manager.rs
crates/paneflow-threads/: Cargo.toml
crates/paneflow-threads/benches/: blob_compress.rs  markdown_append.rs
crates/paneflow-threads/src/: blob.rs  error.rs  item.rs  lib.rs  message.rs  paths.rs  store.rs
crates/paneflow-threads/tests/: integration.rs
docs/: WINDOWS.md  (+12 more)
spike-gpui/: Cargo.toml
spike-gpui/src/: ipc.rs  main.rs  split.rs  terminal.rs  terminal_element.rs  theme.rs
src-app/: Cargo.toml  build.rs
src-app/assets/icons/languages/: README.md  manifest.json
src-app/src/: agent_launcher.rs  agent_sessions.rs  ai_detector.rs  ai_types.rs  assets.rs  claude_sessions.rs  codex_sessions.rs  command_sessions.rs  config_writer.rs  csd.rs  editor.rs  fonts.rs  install_method.rs  ipc.rs  ipc_events.rs  keybindings.rs  keys.rs  launch_cwd.rs  limits.rs  login_shell_env.rs  main.rs  mouse.rs  opencode_sessions.rs  pane.rs  pane_drag.rs  pi_sessions.rs  pricing.rs  pty.rs  runtime_paths.rs  search.rs  self_update.rs  settings_window.rs  split.rs  terminal.rs  terminal_element.rs  theme.rs  title_bar.rs  ui_primitives.rs  update_checker.rs  workspace.rs
src-app/src/agents/: agent_terminal.rs  composer.rs  composer_ext.rs  continuous_spinner.rs  edit_tool_block.rs  external_editor.rs  inline_thinking.rs  inline_tool_call.rs  markdown_style.rs  message_render.rs  mod.rs  notifications.rs  panel_config.rs  parent_guard.rs  runtime.rs  thread_view.rs  title_summarizer.rs
src-app/src/agents_view/: cards.rs  mod.rs  skills.rs  state.rs  view.rs
src-app/src/ai_hooks/: extract.rs  mod.rs
src-app/src/app/: about_dialog.rs  actions.rs  agents_bottom_panel.rs  agents_diff.rs  agents_view_actions.rs  attention_queue.rs  bootstrap.rs  broadcast.rs  composer.rs  constants.rs  custom_buttons_modal.rs  diff_view_actions.rs  diff_view_helpers.rs  drag.rs  event_handlers.rs  files_tree.rs  fleet_search.rs  ipc_handler.rs  launch_pad.rs  mod.rs  notif_menu.rs  notifications.rs  profile_menu.rs  rosetta.rs  self_update_flow.rs  session.rs  sessions_menu.rs  sessions_sidebar.rs  settings.rs  sidebar_actions_menu.rs  telemetry_events.rs  theme_picker.rs
src-app/src/app/agents_diff/: git.rs  mod.rs  model.rs  render.rs
src-app/src/cli/: control_cmds.rs  flow_cmd.rs  flow_spec.rs  mod.rs  read_cmds.rs  selector.rs  send_cmd.rs  up_cmd.rs  wait_cmd.rs  watch_cmd.rs  workspace_spec.rs
src-app/src/diff/: align.rs  arrange.rs  element.rs  engine.rs  extract.rs  git.rs  highlighter.rs  hit_test.rs  hscroll.rs  mod.rs  multi_view.rs  review.rs  review_terminal.rs  rows.rs  scope.rs  scope_header.rs  syntax.rs  view.rs  worddiff.rs
src-app/src/keybindings/: apply.rs  defaults.rs  display.rs  mod.rs  registry.rs
src-app/src/layout/: close.rs  mod.rs  mutations.rs  navigation.rs  presets.rs  queries.rs  render.rs  serde.rs  tree.rs
src-app/src/markdown/: mod.rs  parser.rs  security.rs  state.rs  theme.rs  view.rs
src-app/src/project/: mod.rs
src-app/src/self_update/: appimage.rs  mod.rs  targz.rs
src-app/src/settings/: chrome.rs  components.rs  keyboard.rs  mod.rs  sidebar.rs  window.rs
src-app/src/telemetry/: client.rs  id.rs  mod.rs  tags.rs
src-app/src/terminal/: blink.rs  input.rs  listener.rs  marks.rs  mod.rs  pty_loops.rs  pty_session.rs  scanners.rs  search.rs  service_detector.rs  shell.rs  tee_pty.rs  types.rs  view.rs
src-app/src/theme/: builtin.rs  mod.rs  model.rs  watcher.rs
src-app/src/update/: checker.rs  error.rs  install_method.rs  migrations.rs  mod.rs  signature.rs
src-app/src/widgets/: callout.rs  mod.rs  scrollbar.rs  text_area.rs  text_input.rs
src-app/src/window_chrome/: backdrop.rs  csd.rs  linux_backdrop.rs  macos_backdrop.rs  mod.rs  title_bar.rs
src-app/src/workspace/: git.rs  mod.rs  pid_resolve.rs  ports.rs  surface_naming.rs  worktree.rs
src-app/tests/: flex_nchild.rs
src-app/tests/fixtures/: opencode-session-list.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
(+446 files in other folders)
