[workspace]
resolver = "2"
members = [
    "crates/paneflow-config",
    "src-app",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
license = "MIT"
authors = ["Arthur"]
description = "GPU-accelerated terminal multiplexer for Linux, built in Rust with Zed's GPUI framework"
repository = "https://github.com/ArthurDEV44/paneflow"
homepage = "https://github.com/ArthurDEV44/paneflow"
keywords = ["terminal", "multiplexer", "gpui", "tmux", "tty"]
categories = ["command-line-utilities"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
paneflow-config = { path = "crates/paneflow-config" }

# Required by GPUI — these forks must stay in sync with the pinned Zed rev
# in src-app/Cargo.toml. When bumping GPUI rev, verify these still resolve.
[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop", rev = "eb6b4fd17b9af5ecc226546bdd04185391b3e265" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
