[package]
name = "paneflow-spike-gpui"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
# GPUI framework — path to local Zed monorepo
gpui = { path = "/home/arthur/dev/zed/crates/gpui" }
gpui_platform = { path = "/home/arthur/dev/zed/crates/gpui_platform", features = ["wayland", "x11"] }
collections = { path = "/home/arthur/dev/zed/crates/collections" }

# Alacritty terminal — Zed's fork
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "9d9640d4" }

# Standard deps
anyhow = "1.0.86"
futures = "0.3"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
env_logger = "0.11"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
smol = "2.0"
libc = "0.2"

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop" }
notify = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
notify-types = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
